# Kalman-Filter

./: CMakeLists.txt  README.md  dummy_data.txt
include/: kf.hpp
src/: main.cpp
